--- a/style.css
+++ b/style.css
@@ -1,10 +1,21 @@
 body {
   background-color: rgb(21, 175, 106);
 }
-.cardqtyinput {
-  width: 50px;
-  height: 20px;
+
+button,
+input {
+  box-shadow: 10px 5px 5px black;
 }
-.container button {
-  border: 0;
+button:hover {
+  background-color: aqua;
+}
+
+.card {
+  width: 10%;
+  font-weight: bold;
+  font-size: 3rem;
+}
+.card-footer {
+  color: red !important;
+  transform: rotate(180deg);
 }
