--- a/style.css
+++ b/style.css
@@ -11,11 +11,43 @@ button:hover {
 }
 
 .card {
-  width: 10%;
-  font-weight: bold;
-  font-size: 3rem;
+  width: 100px !important;
+  height: 160px !important;
+  font-weight: bold !important;
+  font-size: 26px !important;
+  margin: 10px !important;
+  display: inline-block !important;
+  border-radius: 10px !important;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.3) !important;
+  background-color: white !important;
 }
-.card-footer {
+
+.heart-diamond {
   color: red !important;
+  font-weight: bold !important;
+}
+
+.card-header {
+  padding: 5px !important;
+  background-color: white !important;
+  border-bottom: none !important;
+  font-size: 24px !important;
+  height: 40px !important;
+}
+
+.card-body {
+  padding: 5px !important;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+  font-size: 36px !important;
+}
+
+.card-footer {
   transform: rotate(180deg);
+  padding: 5px !important;
+  background-color: white !important;
+  border-top: none !important;
+  font-size: 24px !important;
+  height: 40px !important;
 }
